[package]
name = "mc-testnet-client"
version = "1.0.0"
authors = ["MobileCoin"]
edition = "2018"

[dependencies]
chrono = "0.4"
dialoguer = "0.6"
grpcio = "0.6.0"
hex = "0.4"
indicatif = "0.14"
protobuf = "2.12"
rust_decimal = { version = "1.4", default-features = false }
structopt = "0.3"

mc-api = { path = "../api" }
mc-common = { path = "../common", features = ["loggers"] }
mc-mobilecoind-api = { path = "../mobilecoind/api" }
mc-util-grpc = { path = "../util/grpc" }

[build-dependencies]
serde = { version = "1", default-features = false, features = ["alloc", "derive"] }
