[package]
name = "mc-watcher"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"

[[bin]]
name = "mc-watcher"
path = "src/bin/main.rs"

[[bin]]
name = "mc-watcher-db-dump"
path = "src/bin/db-dump.rs"

[dependencies]
mc-api = { path = "../api" }
mc-attest-core = { path = "../attest/core" }
mc-attest-verifier = { path = "../attest/verifier" }
mc-blockchain-types = { path = "../blockchain/types" }
mc-common = { path = "../common", features = ["log"] }
mc-connection = { path = "../connection" }
mc-crypto-digestible = { path = "../crypto/digestible" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-ledger-db = { path = "../ledger/db" }
mc-ledger-sync = { path = "../ledger/sync" }
mc-util-from-random = { path = "../util/from-random" }
mc-util-grpc = { path = "../util/grpc" }
mc-util-lmdb = { path = "../util/lmdb" }
mc-util-metrics = { path = "../util/metrics" }
mc-util-parse = { path = "../util/parse" }
mc-util-repr-bytes = { path = "../util/repr-bytes" }
mc-util-serial = { path = "../util/serial" }
mc-util-uri = { path = "../util/uri" }
mc-watcher-api = { path = "api" }

clap = { version = "3.2", features = ["derive", "env"] }
displaydoc = { version = "0.2", default-features = false }
futures = "0.3"
grpcio = "0.10.2"
hex = "0.4"
lazy_static = "1.4"
lmdb-rkv = "0.14.0"
prost = { version = "0.10", default-features = false, features = ["prost-derive"] }
rayon = "1.5"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
toml = "0.5"
url = "2.2"

[dev-dependencies]
mc-account-keys = { path = "../account-keys" }
mc-blockchain-test-utils = { path = "../blockchain/test-utils" }
mc-common = { path = "../common", features = ["loggers"] }
mc-util-test-helper = { path = "../util/test-helper" }

lazy_static = "1.4"
rand_core = "0.6"
rand_hc = "0.3"
serial_test = "0.7"
tempdir = "0.3"
