[package]
name = "mc-account-keys-types"
version = "4.1.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
# MobileCoin dependencies
mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
