[package]
name = "mc-attest-ake"
version = "1.1.2"
authors = ["MobileCoin"]
edition = "2018"

[features]
default = ["std"]
std = [
    "mc-attest-core/std",
    "digest/std",
    "serde/std",
]
sgx-sim = [
    "mc-attest-core/sgx-sim",
]

[dependencies]
mc-attest-core = { path = "../../attest/core", default-features = false }
mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
mc-crypto-noise = { path = "../../crypto/noise", default-features = false }

aead = "0.4"
digest = { version = "0.9", default-features = false }
displaydoc = { version = "0.2", default-features = false }
prost = { version = "0.6.1", default-features = false, features = ["prost-derive"] }
rand_core = "0.6"
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
mc-attest-net = { path = "../net" }
mc-util-encodings = { path = "../../util/encodings" }
mc-util-from-random = { path = "../../util/from-random" }
aes-gcm = "0.9.2"
rand_hc = "0.3"
sha2 = "0.9.5"

[build-dependencies]
mc-util-build-script = { path = "../../util/build/script" }
mc-util-build-sgx = { path = "../../util/build/sgx" }

cargo-emit = "0.1"
