[package]
name = "mc-attest-ake"
version = "5.2.2"
authors = ["MobileCoin"]
edition = "2021"
license = "Apache-2.0"
rust-version = { workspace = true }

[features]
default = ["std"]
std = [
    "mc-attest-core/std",
    "digest/std",
    "serde/std",
]
sgx-sim = [
    "mc-attest-verifier/sgx-sim",
]

[dependencies]
mc-attest-core = { path = "../../attest/core", default-features = false }
mc-attest-verifier = { path = "../../attest/verifier", default-features = false }
mc-attest-verifier-types = { path = "../../attest/verifier/types", default-features = false }
mc-crypto-keys = { path = "../../crypto/keys", default-features = false }
mc-crypto-noise = { path = "../../crypto/noise", default-features = false }

aead = "0.5"
der = "0.7.8"
digest = "0.10"
displaydoc = { version = "0.2", default-features = false }
mc-attestation-verifier = "0.4.2"
mc-sgx-dcap-types = "0.10.1"
prost = { version = "0.12", default-features = false, features = ["prost-derive"] }
rand_core = "0.6"
serde = { version = "1.0", default-features = false, features = ["alloc"] }

[dev-dependencies]
mc-attest-untrusted = { path = "../untrusted" }
mc-util-encodings = { path = "../../util/encodings" }
mc-util-from-random = { path = "../../util/from-random" }

aes-gcm = "0.10.3"
rand_hc = "0.3"
sha2 = { version = "0.10", default-features = false }

[build-dependencies]
mc-util-build-script = { path = "../../util/build/script" }
mc-util-build-sgx = { path = "../../util/build/sgx" }

cargo-emit = "0.2"
