[package]
name = "mc-attest-api"
version = "1.1.2"
authors = ["MobileCoin"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "gRPC APIs for encrypted communications with an enclave"
keywords = ["SIGMA", "Cryptography", "Key Exchange", "Diffie-Hellman", "SGX", "Attestation"]
readme = "README.md"
links = "mc-attest-api"

[build-dependencies]
mc-util-build-grpc = { path = "../../util/build/grpc" }
mc-util-build-script = { path = "../../util/build/script" }

cargo-emit = "0.1.1"

[dependencies]
mc-attest-ake = { path = "../ake" }
mc-attest-enclave-api = { path = "../enclave-api" }
mc-crypto-keys = { path = "../../crypto/keys" }
mc-crypto-noise = { path = "../../crypto/noise" }

aead = "0.4"
digest = "0.9"
futures = "0.3"
grpcio = "0.9.0"
protobuf = "2.22.1"
