[package]
name = "mc-attest-core"
version = "1.2.0-pre0"
authors = ["MobileCoin"]
edition = "2018"
description = '''
This crate contains necessary functions and utilities to perform remote
attestation and verification of an SGX enclave.

At present this is limited to the data structures and and errors necessary to
verify the contents of the report as returned by Intel.
'''

[features]
default = ["std"]
std = [
    "mc-common/std",
    "digest/std",
    "displaydoc/std",
    "sha2/std",
]

[dependencies]
mc-common = { path = "../../common", default-features = false }
mc-crypto-digestible = { path = "../../crypto/digestible" }
mc-crypto-rand = { path = "../../crypto/rand" }
mc-util-encodings = { path = "../../util/encodings" }
mc-sgx-css = { path = "../../sgx/css" }
mc-sgx-types = { path = "../../sgx/types" }

binascii = "0.1.2"
bitflags = "1.2"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
digest = { version = "0.10", default-features = false }
displaydoc = { version = "0.2", default-features = false }
hex_fmt = "0.3"
rjson = "0.3.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.9.8", default-features = false }
subtle = { version = "2.4.1", default-features = false, features = ["i128"] }
prost = { version = "0.9", default-features = false }

[dev-dependencies]
mc-util-serial = { path = "../../util/serial" }

bincode = "1.3"
hex = "0.4"
pem = "1.0"
rand = "0.8"
rand_hc = "0.3"

[build-dependencies]
mc-util-build-script = { path = "../../util/build/script" }
mc-util-build-sgx = { path = "../../util/build/sgx" }

cargo-emit = "0.2.1"
