[package]
name = "mc-attest-core"
version = "1.3.0-pre0"
authors = ["MobileCoin"]
edition = "2021"
description = '''
This crate contains necessary functions and utilities to perform remote
attestation and verification of an SGX enclave.

At present this is limited to the data structures and and errors necessary to
verify the contents of the report as returned by Intel.
'''

[features]
default = ["std"]
std = [
    "digest/std",
    "displaydoc/std",
    "mc-common/std",
    "mc-util-encodings/std",
    "sha2/std",
]

[dependencies]
mc-attest-verifier-types = { path = "../verifier/types" }
mc-common = { path = "../../common", default-features = false }
mc-crypto-digestible = { path = "../../crypto/digestible" }
mc-crypto-rand = { path = "../../crypto/rand" }
mc-sgx-css = { path = "../../sgx/css" }
mc-sgx-types = { path = "../../sgx/types" }
mc-util-encodings = { path = "../../util/encodings" }
mc-util-repr-bytes = { path = "../../util/repr-bytes", features = ["hex_fmt"] }

base64 = { version = "0.13", default-features = false, features = ["alloc"] }
bitflags = "1.2"
chrono = { version = "0.4.19", default-features = false, features = ["alloc"] }
digest = "0.10"
displaydoc = { version = "0.2", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
hex_fmt = "0.3"
prost = { version = "0.10", default-features = false }
rjson = "0.3.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
sha2 = { version = "0.10", default-features = false }
subtle = { version = "2.4.1", default-features = false, features = ["i128"] }

[dev-dependencies]
mc-util-serial = { path = "../../util/serial" }

bincode = "1.3"
hex = "0.4"
pem = "1.0"
rand = "0.8"
rand_hc = "0.3"

[build-dependencies]
mc-util-build-script = { path = "../../util/build/script" }
mc-util-build-sgx = { path = "../../util/build/sgx" }

cargo-emit = "0.2.1"
