[package]
name = "mc-attest-enclave-api"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"
description = """
no_std structs used commonly in enclave api's in connection with attestation and key exchange
"""

[dependencies]
mc-attest-ake = { path = "../ake", default-features = false }
mc-attest-core = { path = "../../attest/core", default-features = false }
mc-attest-verifier = { path = "../../attest/verifier", default-features = false }
mc-crypto-noise = { path = "../../crypto/noise", default-features = false }
mc-sgx-compat = { path = "../../sgx/compat" }

displaydoc = { version = "0.2", default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
