[package]
name = "attest-enclave-api"
version = "0.1.0"
authors = ["MobileCoin"]
edition = "2018"
description = """
no_std structs used commonly in enclave api's in connection with attestation and key exchange
"""

[dependencies]
attest = { path = "../../attest/core", default-features = false }
attest-ake = { path = "../ake", default-features = false }
mcnoise = { path = "../../crypto/ake/mcnoise", default-features = false }
sgx_compat = { path = "../../sgx/sgx_compat" }

failure = { version = "0.1.5", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
